WIP - Added Create Applications endpoint and logic
