# src/DfE.ExternalApplications.Application/Applications/Queries/GetApplicationsForUserByExternalProviderIdQueryHandler.cs
@@ -1,5 +1,6 @@
 ﻿using DfE.CoreLibs.Caching.Helpers;
 using DfE.CoreLibs.Caching.Interfaces;
+using DfE.CoreLibs.Contracts.ExternalApplications.Enums;
 using DfE.CoreLibs.Contracts.ExternalApplications.Models.Response;
 using DfE.ExternalApplications.Application.Applications.QueryObjects;
 using DfE.ExternalApplications.Application.Users.QueryObjects;
@@ -58,6 +59,7 @@ public sealed class GetApplicationsForUserByExternalProviderIdQueryHandler(
                         ApplicationReference = a.ApplicationReference,
                         TemplateVersionId = a.TemplateVersionId.Value,
                         DateCreated = a.CreatedOn,
+                        DateSubmitted = a.Status == ApplicationStatus.Submitted ? a.LastModifiedOn : null,
                         TemplateName = a.TemplateVersion?.Template?.Name ?? string.Empty,
                         Status = a.Status
                     }).ToList().AsReadOnly();
